@@ -23,6 +23,7 @@ import java.lang.invoke.MethodHandle;
 import java.lang.reflect.AccessibleObject;
 import java.lang.reflect.Member;
 
+import static io.microsphere.constants.SeparatorConstants.LINE_SEPARATOR;
 import static io.microsphere.invoke.MethodHandleUtils.findVirtual;
 import static io.microsphere.logging.LoggerFactory.getLogger;
 import static io.microsphere.reflect.MemberUtils.asMember;
@@ -40,26 +41,31 @@ public abstract class AccessibleObjectUtils extends BaseUtils {
     private static final Logger logger = getLogger(AccessibleObjectUtils.class);
 
     /**
-     * The method name of {@link AccessibleObject#canAccess(Object)} since Java 9
+     * The method name of {@link AccessibleObject#canAccess(Object)} since JDK 9
      */
     private static final String canAccessMethodName = "canAccess";
 
     /**
-     * The method name of {@link AccessibleObject#trySetAccessible()} since Java 9
+     * The method name of {@link AccessibleObject#trySetAccessible()} since JDK 9
      */
     private static final String trySetAccessibleMethodName = "trySetAccessible";
 
     /**
-     * The {@link MethodHandle} of {@link AccessibleObject#canAccess(Object)} since Java 9
+     * The {@link MethodHandle} of {@link AccessibleObject#canAccess(Object)} since JDK 9
      * if <code>canAccessMethodHandle == null</code>, it indicates the version of JDK is less than 9
      */
     private static final MethodHandle canAccessMethodHandle = findVirtual(AccessibleObject.class, canAccessMethodName, Object.class);
 
     /**
-     * The {@link MethodHandle} of {@link AccessibleObject#trySetAccessible()} since Java 9
+     * The {@link MethodHandle} of {@link AccessibleObject#trySetAccessible()} since JDK 9
      * if <code>canAccessMethodHandle == null</code>, it indicates the version of JDK is less than 9
      */
     private static final MethodHandle trySetAccessibleMethodHandle = findVirtual(AccessibleObject.class, trySetAccessibleMethodName);
+
+    /**
+     * The class name of {@linkplain java.lang.reflect.InaccessibleObject} since JDK 9
+     */
+    public static final String INACCESSIBLE_OBJECT_EXCEPTION_CLASS_NAME = "java.lang.reflect.InaccessibleObjectException";
 
     /**
      * Try to set the {@link AccessibleObject} accessible.
@@ -68,7 +74,7 @@ public abstract class AccessibleObjectUtils extends BaseUtils {
      * or {@link AccessibleObject#setAccessible(boolean)} method will be invoked if
      * {@link AccessibleObject#isAccessible()} is <code>false</code>.
      *
-     * @param accessibleObject {@link AccessibleObject}
+     * @param accessibleObject the {@link AccessibleObject} instance
      * @return
      * @see AccessibleObject#trySetAccessible()
      * @see AccessibleObject#setAccessible(boolean)
@@ -76,14 +82,38 @@ public abstract class AccessibleObjectUtils extends BaseUtils {
      */
     public static boolean trySetAccessible(AccessibleObject accessibleObject) {
         MethodHandle methodHandle = trySetAccessibleMethodHandle;
-        if (methodHandle == null) { // JDK < 9
-            if (!accessibleObject.isAccessible()) {
-                accessibleObject.setAccessible(true);
-            }
+        if (methodHandle == null) { // JDK < 9 or not be initialized
+            setAccessible(accessibleObject);
             return true;
         } else { // JDK 9+
             return trySetAccessible(methodHandle, accessibleObject);
         }
+    }
+
+    /**
+     * Set the {@link AccessibleObject} accessible.
+     *
+     * @param accessibleObject the {@link AccessibleObject} instance
+     * @return previous accessible status of the {@link AccessibleObject} instance
+     */
+    static boolean setAccessible(AccessibleObject accessibleObject) {
+        boolean accessible = accessibleObject.isAccessible();
+        if (!accessible) {
+            try {
+                accessibleObject.setAccessible(true);
+            } catch (RuntimeException e) {
+                String exceptionClassName = e.getClass().getName();
+                if (INACCESSIBLE_OBJECT_EXCEPTION_CLASS_NAME.equals(exceptionClassName)) {
+                    // JDK 16+ : JEP 396: Strongly Encapsulate JDK Internals by Default - https://openjdk.org/jeps/396
+                    String errorMessage = "JEP 396: Strongly Encapsulate JDK Internals by Default since JDK 16 - https://openjdk.org/jeps/396 ."
+                            + LINE_SEPARATOR
+                            + "It's require to add JVM Options '--add-opens java.base/java.lang.invoke=ALL-UNNAMED' for running";
+                    logger.error(errorMessage, e);
+                }
+                throw e;
+            }
+        }
+        return accessible;
     }
 
     /**
